<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EntryyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/dialog_pop_entry_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="5dp"
            android:textStyle="italic"
            android:text="@string/entry_default_header"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <EditText
            android:id="@+id/dialog_pop_entry_subject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="textPersonName"
            android:layout_marginTop="40dp"
            android:hint="@string/entry_subject" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/dialog_pop_entry_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:inputType="textMultiLine"
                    android:hint="@string/entry_message"/>

            </ScrollView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/dialog_pop_save_button"
                android:layout_width="300dp"
                android:layout_marginLeft="40dp"
                android:layout_height="wrap_content"
                android:text="@string/save_entry_button"
                android:layout_marginTop="300dp"/>
        </RelativeLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>