<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="368dp"
        android:layout_height="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.063"
        app:cardCornerRadius="40dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="18dp"
                app:srcCompat="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/list_row_entry_subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignTop="@+id/imageView"
                android:layout_marginStart="106dp"
                android:text="@string/entry_subject" />

            <TextView
                android:id="@+id/list_row_entry_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/list_row_entry_date"
                android:layout_alignStart="@+id/list_row_entry_subject"
                android:text="@string/entry_message" />

            <Button
                android:id="@+id/list_row_delete_button"
                android:layout_width="30dp"
                android:layout_height="28dp"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/imageView"
                android:layout_marginEnd="14dp"
                android:background="@drawable/delete"/>

            <Button
                android:id="@+id/list_row_edit_button"
                android:layout_width="30dp"
                android:layout_height="28dp"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/imageView"
                android:layout_marginEnd="53dp"
                android:background="@drawable/edit" />

            <TextView
                android:id="@+id/list_row_entry_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageView"
                android:layout_alignEnd="@+id/list_row_delete_button"
                android:text="@string/entry_date" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>